--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "lucide-react": "^0.360.0",
     "mysql2": "^3.9.2",
     "next": "14.1.4",
     "react": "^18",
